ingress-silver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: silver
  rules:
  - http:
      paths:
      - path: /silver
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
